# SecuSim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  analysis_parameter_ranges.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
data/: README.md  sample_loan_data.csv
logs/: .gitkeep
notebooks/: securitization_analysis_demo.ipynb
reports/: monte_carlo_results.csv  statistical_analysis_summary.yaml
reports/figures/: .gitkeep
scripts/: compare.py  generate_sample_data.py  run_with_real_fannie_mae.py  statistical_demo.py
securitization_comparison/: __init__.py  data_loader.py  statistical_analysis.py  viz.py
securitization_comparison/models/: __init__.py  _blockchain_weighting.yaml  _traditional_weighting.yaml  base.py  blockchain.py  traditional.py
tests/: __init__.py  test_models.py
